--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,10 @@
         "Pointof",
         "Posttest",
         "mydatabase",
+        "myobj",
         "myquery",
         "newvalues",
+        "timetodo",
         "ยังไม่ทำ",
         "รอตรวจ"
     ]
