--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "myobj",
         "myquery",
         "newvalues",
+        "sumpre",
         "timetodo",
         "ยังไม่ทำ",
         "รอตรวจ"
