update var for db
สร้างตัวแปรเก็บคะแนนใน db
ยังไม่มีอะไรเป็นชิ้นเป็นอันเรยยย

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "sumpre",
         "timetodo",
         "ยังไม่ทำ",
-        "รอตรวจ"
+        "รอตรวจ",
+        "Studentresult","coursename","cpts","mycollection","makeid","classid","APPT"
     ],
     "liveServer.settings.port": 5501
 }
