--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "timetodo",
         "ยังไม่ทำ",
         "รอตรวจ",
+        "Roshambo",
         "Studentresult","coursename","cpts","mycollection","makeid","classid","APPT"
     ],
     "liveServer.settings.port": 5501
