--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
         "ยังไม่ทำ",
         "รอตรวจ",
         "Roshambo",
-        "Studentresult","coursename","cpts","mycollection","makeid","classid","APPT"
+        "Studentresult","coursename","cpts","mycollection","makeid","classid","APPT",
     ],
     "liveServer.settings.port": 5501
 }
