--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-MONGODB_URI=mongodb+srv://cpts9850:Cpts1234@cluster0.fvblynd.mongodb.net
+MONGODB_URI=mongodb+srv://cpts9850:Cpts1234@cluster0.fvblynd.mongodb.net/Cluster0
 DB_NAME=Cluster0
 SESSION_SECRET=some super secret
 ADMIN_EMAIL=cpts9850@gmail.com
